# cpp-tasks

./: README.md
closed-hash/: CMakeLists.txt  ClosedHash.h  ClosedHashTest.cpp  main.cpp  names.txt
many-to-many/: BaseEntry.h  CMakeLists.txt  ConnectionEntry.h  Course.h  CourseEntry.h  Database.cpp  Database.h  DatabaseTest.cpp  Entry.h  Student.h  StudentEntry.h  courses.txt  students.txt
open-hash/: CMakeLists.txt  Elem.h  OpenHash.h  TESTS.cpp
open-hash/test-data/: 01-one-name.txt  02-one-repeated-name.txt  03-multiple-names.txt  04-multiple-repeated-names.txt
partially-ordered-set/: CMakeLists.txt  Elem.h  PartiallyOrderedSet.h  TESTS.cpp  invalid1.txt  invalid4.txt  test6.txt  tests-main.cpp
priority-queue/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h
queue-with-priorities/: CMakeLists.txt  PrioritizedQueue.cpp  PrioritizedQueue.h  PrioritizedQueueTest.cpp  PriorityQueueTest.cpp
set/: CMakeLists.txt
set-on-bit-field/: CMakeLists.txt  Set.h  TESTS.cpp  main.cpp
set-on-bit-field/linked-unordered-list/: Set_ul.h  TESTS.cpp
set/bit-field/: Set_bits.h  TESTS.cpp
set/linked-unordered-list/: Elem.h  Set_ul.cpp  Set_ul.h
topological-sorting/: CMakeLists.txt  NodeOfBiggerElemsList.h  README.md  TESTS.cpp  TopologicalSorting.h  test5.txt
topological-sorting/test-data/: test1.txt  test2.txt  test4.txt
